--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -309,15 +309,19 @@ $block-inserter-tabs-height: 44px;
 	// see https://github.com/WordPress/gutenberg/issues/24529.
 	max-width: 100%;
 
+	@include break-medium {
+		width: $block-quick-inserter-width;
+	}
+}
+
+.block-editor-inserter__quick-inserter,
+.block-editor-inserter__panel-content,
+.block-editor-inserter__preview-container {
 	// Avoids large icons for custom block icons.
 	// Needs this rule for fixing size on block widget editor.
 	img {
 		max-width: 100%;
 		height: auto;
-	}
-
-	@include break-medium {
-		width: $block-quick-inserter-width;
 	}
 }
 
